# HexForge-Companion

./: .env.example  .gitignore  BENCHMARKS.md  LICENSE  README.md  RELEASE_CHECKLIST.md  build-windows.bat  index.html  package-lock.json  package.json  proxy.py  setup-service.sh  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md
landing/: index.html
landing/downloads/mock/: league_entries.json  match_detail_1.json  platform_status.json  rated_ladder_top.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mock/: account.json  active_game.json  active_shard.json  challenger_league.json  grandmaster_league.json  league_entries_tier.json  master_league.json  match_detail_2.json  match_ids.json  region.json  summoner.json
src-tauri/src/: api.rs  commands.rs  db.rs  lib.rs  logger.rs  main.rs  overlay.rs  process_watcher.rs
src/components/: DisplayModeWarning.tsx  InGameIndicator.tsx  LeaderboardDisplay.tsx  LegalFooter.tsx  MatchHistory.tsx  PinnedWidget.tsx  PlatformStatus.tsx  PlayerSearch.tsx  PlayerStats.tsx  RankDisplay.tsx
src/hooks/: useApi.ts  useAppUpdater.tsx  useTftWatcher.tsx
