[package]
name = "hexforge-companion"
version = "0.5.0"
description = "TFT desktop companion overlay — HexForge Companion"
authors = ["HexForge Team"]
edition = "2021"

[lib]
name = "hexforge_companion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
dotenvy = "0.15"

# Platform-specific — Windows process detection
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Graphics_Gdi",
]}

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
